--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <!-- <link rel="icon" href="/src/assets/logo.png" type="image/png"> -->
     <title>Lightbox</title>
   </head>
   <body>
